Revision history for Music-Duration-Partition

{{$NEXT}}
    - Clean up code.
    - Add eg/figured-bass.
    - Improve documentation.

0.0303 2019-10-26 12:46:33
    - Enhance eg/shuffle.
    - Remove unneeded code.
    - Attempt to resolve the aforementioned RT ticket with rounding...

0.0302 2019-10-24 10:09:12
    - Improve documentation ever so slightly.

0.0301 2019-10-24 10:02:13
    - Improve documentation.

0.0300 2019-10-24 09:58:33
    - Improve documentation.
    - Add the pool_code attribute.

0.0200 2019-10-24 07:11:40
    - Remove the threshold attribute.
    - Add the min_size attribute.
    - Attempt to repair the ->motif loop next and last conditions to satisfy https://rt.cpan.org/Ticket/Display.html?id=130757

0.0103 2019-10-17 10:47:16
    - Add the eg/shuffle program.
    - Clean up documentation.

0.0102 2019-10-17 09:09:05
    - Improve documentation.

0.0101 2019-10-17 08:56:07
    - Improve documentation.

0.0100 2019-10-17 08:26:23
    - Mint with Dist:Zilla.