@@ -100,6 +100,7 @@ Default: C<[ keys %MIDI::Simple::Length ]>
 
 has pool => (
     is      => 'ro',
+    isa     => sub { die 'Not a non-empty ArrayRef' unless ref( $_[0] ) eq 'ARRAY' && @{ $_[0] } > 0 },
     default => sub { return [ keys %MIDI::Simple::Length ] },
 );
 
