@@ -3,10 +3,14 @@ use strict;
 use warnings;
 
 use Test::More;
+use Test::Exception;
 
 use MIDI::Simple;
 
 use_ok 'Music::Duration::Partition';
+
+throws_ok { Music::Duration::Partition->new( pool => [] ) }
+    qr/Not a non-empty ArrayRef/, 'empty pool not allowed';
 
 my $mdp = Music::Duration::Partition->new;
 isa_ok $mdp, 'Music::Duration::Partition';
