@@ -4,6 +4,7 @@ Revision history for Music-Duration-Partition
     - Clean up code.
     - Add eg/figured-bass.
     - Improve documentation.
+    - Disallow empty pools.
 
 0.0303 2019-10-26 12:46:33
     - Enhance eg/shuffle.
